xtask/src/grammar/testdata/lr1.output
Rules useless in parser due to conflicts

    6 y: C


State 4 conflicts: 2 reduce/reduce


Grammar

    0 $accept: s $end

    1 s: A x D
    2  | A y E
    3  | B x E
    4  | B y D

    5 x: C

    6 y: C


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    A (258) 1 2
    B (259) 3 4
    C (260) 5 6
    D (261) 1 4
    E (262) 2 3


Nonterminals, with rules where they appear

    $accept (8)
        on left: 0
    s (9)
        on left: 1 2 3 4
        on right: 0
    x (10)
        on left: 5
        on right: 1 3
    y (11)
        on left: 6
        on right: 2 4


State 0

    0 $accept: • s $end

    A  shift, and go to state 1
    B  shift, and go to state 2

    s  go to state 3


State 1

    1 s: A • x D
    2  | A • y E

    C  shift, and go to state 4

    x  go to state 5
    y  go to state 6


State 2

    3 s: B • x E
    4  | B • y D

    C  shift, and go to state 4

    x  go to state 7
    y  go to state 8


State 3

    0 $accept: s • $end

    $end  shift, and go to state 9


State 4

    5 x: C •
    6 y: C •

    D  reduce using rule 5 (x)
    D  [reduce using rule 6 (y)]
    E  reduce using rule 5 (x)
    E  [reduce using rule 6 (y)]


State 5

    1 s: A x • D

    D  shift, and go to state 10


State 6

    2 s: A y • E

    E  shift, and go to state 11


State 7

    3 s: B x • E

    E  shift, and go to state 12


State 8

    4 s: B y • D

    D  shift, and go to state 13


State 9

    0 $accept: s $end •

    $default  accept


State 10

    1 s: A x D •

    $end  reduce using rule 1 (s)


State 11

    2 s: A y E •

    $end  reduce using rule 2 (s)


State 12

    3 s: B x E •

    $end  reduce using rule 3 (s)


State 13

    4 s: B y D •

    $end  reduce using rule 4 (s)
